[package]

name = "gossip"
version = "0.0.1"
authors = ["Kenneth Nierenhausen <kennethnierenhausen@gmail.com>"]

[lib]

# The name of a target is the name of the library that will be generated. This
# is defaulted to the name of the package or project.
name = "gossip"
# This field points at where the crate is located, relative to the Cargo.toml.
path = "src/lib.rs"
# A flag for enabling unit tests for this target. This is used by cargo test.
test = true
# A flag for enabling documentation tests for this target. This is only
# relevant for libraries, it has no effect on other sections. This is used by
# cargo test.
doctest = true
# A flag for enabling benchmarks for this target. This is used by cargo bench.
bench = true
# A flag for enabling documentation of this target. This is used by cargo doc.
doc = true
# If the target is meant to be a compiler plugin, this field must be set to true
# for cargo to correctly compile it and make it available for all dependencies.
plugin = false